[project]
name = "vision-quality-grader"
version = "0.1.0"
description = "An intelligent image quality assessment tool based on Vision Large Models (VLM), providing professional analysis and evaluation services."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT License" }
keywords = ["vlm", "image-quality", "computer-vision", "asyncio", "batch-processing"]
authors = [{ name = "charSLee013" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Image Processing",
]
dependencies = [
    "aiofiles>=23.0",
    "aiohttp>=3.8",
    "tqdm>=4.64",
    "xmltodict>=0.13",
    "python-dotenv>=1.0",
    "filetype>=1.2",
    "colorama>=0.4",
    "pandas>=1.0",
    "Pillow>=9.0",
    "imagesize>=1.4.0",
]

[project.urls]
Homepage = "https://github.com/charSLee013/vision-quality-grader-"
Repository = "https://github.com/charSLee013/vision-quality-grader-"
